[tool.poetry]
name = "Arcane_Aristocracy"
version = "0.0.1"
description = "An expounding on Thief's foundations"
authors = ["Lamorak Sallow <>"]

[tool.poetry.dependencies]
python = "^3.8"
getch = "^1.0"
colr = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
